[gd_scene load_steps=25 format=3 uid="uid://2a4txohmhno6"]

[ext_resource type="PackedScene" uid="uid://dlnr0n5l4fehd" path="res://scenes/Player.tscn" id="1_qbsmt"]
[ext_resource type="PackedScene" uid="uid://dliucd6k8doqo" path="res://scenes/Virus.tscn" id="2_cpr0p"]
[ext_resource type="PackedScene" uid="uid://c7l442e0awhgb" path="res://scenes/HUD.tscn" id="3_cpr0p"]
[ext_resource type="Script" uid="uid://xq44nah1s2dl" path="res://scripts/game.gd" id="4_gw6i8"]
[ext_resource type="Script" uid="uid://eqw6dr31eft7" path="res://scripts/enemy_spawner.gd" id="5_1kq1q"]
[ext_resource type="Texture2D" uid="uid://jrtnpxrrw4s2" path="res://assets/backgrounds/Background stage/border-camera.png" id="6_aug50"]
[ext_resource type="Texture2D" uid="uid://baaypbcyghrm1" path="res://assets/backgrounds/Background stage/placeholder-btn-arrow.png" id="7_phldr"]
[ext_resource type="PackedScene" uid="uid://fl63ylkoh1go" path="res://scenes/NumberDisplay.tscn" id="8_qy1jj"]
[ext_resource type="PackedScene" uid="uid://wq5m7o6hlvd7" path="res://scenes/ShootingUI.tscn" id="8_shootui"]
[ext_resource type="Texture2D" uid="uid://dgyb4r2tnfwoq" path="res://assets/backgrounds/Background stage/map.png" id="9_g4kob"]
[ext_resource type="PackedScene" uid="uid://e2iiras4tas8" path="res://scenes/objects/VendingMachine.tscn" id="10_3xj3m"]
[ext_resource type="PackedScene" uid="uid://bq66nd0l0qicv" path="res://scenes/objects/Hospital.tscn" id="11_mcffj"]
[ext_resource type="PackedScene" uid="uid://bycnpxqq8x2up" path="res://scenes/objects/Box.tscn" id="12_2rd6h"]
[ext_resource type="PackedScene" uid="uid://8rrddtblbwga" path="res://scenes/objects/Pot.tscn" id="13_7ua8r"]
[ext_resource type="PackedScene" uid="uid://64opa8qso355" path="res://scenes/objects/Pot2.tscn" id="14_r7sob"]
[ext_resource type="PackedScene" uid="uid://7bqtbsehrsad" path="res://scenes/objects/Pot3.tscn" id="15_y5y3l"]
[ext_resource type="PackedScene" uid="uid://cfy2xmqwm5vq" path="res://scenes/objects/Tree.tscn" id="16_vjgi4"]
[ext_resource type="PackedScene" path="res://scenes/objects/Pole.tscn" id="17_kyk2p"]
[ext_resource type="PackedScene" path="res://scenes/Potion.tscn" id="19_45i86"]
[ext_resource type="AudioStream" uid="uid://bpkqlt128hr7a" path="res://assets/Audio/intheloopmod.mp3" id="20_sv1m6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vjgi4"]
size = Vector2(8360, 171)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kyk2p"]
size = Vector2(8358, 86.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_45i86"]
size = Vector2(4440, 207.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sv1m6"]
size = Vector2(58, 4496)

[node name="Game" type="Node2D" groups=["player", "virus"]]
script = ExtResource("4_gw6i8")

[node name="Player" parent="." instance=ExtResource("1_qbsmt")]
z_index = 10
position = Vector2(955, 586)

[node name="Camera2D" type="Camera2D" parent="Player" groups=["camera"]]
zoom = Vector2(0.5, 0.5)
limit_left = -3110
limit_top = -1665
limit_right = 5120
limit_bottom = 3006

[node name="Virus" parent="." instance=ExtResource("2_cpr0p")]
position = Vector2(-1316, 682)
speed = 250.0
stopping_distance = 10.0

[node name="GlobalTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("5_1kq1q")
enemy_scene = ExtResource("2_cpr0p")
spawn_interval = 2.5
max_enemies_alive = 50

[node name="BorderLayer" type="CanvasLayer" parent="." groups=["camera"]]

[node name="BorderImage" type="TextureRect" parent="BorderLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -1099.0
offset_right = -330.0
offset_bottom = -720.0
grow_horizontal = 2
grow_vertical = 0
rotation = 0.0003674495
scale = Vector2(3.4, 3)
texture = ExtResource("6_aug50")
stretch_mode = 2

[node name="ArrowUILayer" type="CanvasLayer" parent="BorderLayer"]

[node name="Placeholder" type="TextureRect" parent="BorderLayer/ArrowUILayer"]
z_index = 5
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -893.0
offset_top = -428.0
offset_right = 76.84009
offset_bottom = 220.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("7_phldr")

[node name="ShootingUI" parent="BorderLayer/ArrowUILayer/Placeholder" groups=["shooting_ui"] instance=ExtResource("8_shootui")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.92004
offset_top = -54.0
offset_right = 105.079956
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)

[node name="InpuTimerDisplay" parent="BorderLayer/ArrowUILayer/Placeholder" groups=["input_timer_display"] instance=ExtResource("8_qy1jj")]
visible = false
layout_mode = 0
offset_left = 142.0
offset_top = 160.0
offset_right = 214.0
offset_bottom = 288.0
scale = Vector2(0.7203008, 0.7203008)

[node name="HUD" parent="BorderLayer" instance=ExtResource("3_cpr0p")]
offset_left = 50.999996
offset_top = 117.0
offset_right = 91.0
offset_bottom = 157.0
scale = Vector2(0.35, 0.35)

[node name="Objects" type="Node2D" parent="."]

[node name="VendingMachine" parent="Objects" instance=ExtResource("10_3xj3m")]
position = Vector2(4290, 216)
scale = Vector2(4.4833555, 4.4833555)
metadata/_edit_lock_ = true

[node name="Hospital" parent="Objects" instance=ExtResource("11_mcffj")]
position = Vector2(-1328, -458)
scale = Vector2(4.3685174, 4.3685174)
metadata/_edit_lock_ = true

[node name="Box0" parent="Objects" instance=ExtResource("12_2rd6h")]
position = Vector2(183, 327)
scale = Vector2(4.2586355, 4.2586355)
metadata/_edit_lock_ = true

[node name="Box1" parent="Objects" instance=ExtResource("12_2rd6h")]
position = Vector2(-2950.9998, 685)
scale = Vector2(4.2586355, 4.2586355)
metadata/_edit_lock_ = true

[node name="Pot0" parent="Objects" instance=ExtResource("13_7ua8r")]
position = Vector2(297, -1001)
scale = Vector2(4.5238094, 4.5238094)
metadata/_edit_lock_ = true

[node name="Pot1" parent="Objects" instance=ExtResource("13_7ua8r")]
position = Vector2(2323, 533)
scale = Vector2(4.5238094, 4.5238094)
metadata/_edit_lock_ = true

[node name="Pot2" parent="Objects" instance=ExtResource("13_7ua8r")]
position = Vector2(4635, 433)
scale = Vector2(4.5238094, 4.5238094)
metadata/_edit_lock_ = true

[node name="Pot22" parent="Objects" instance=ExtResource("14_r7sob")]
position = Vector2(1761.9999, -1407)
scale = Vector2(4.4519, 4.4519)
metadata/_edit_lock_ = true

[node name="Pot23" parent="Objects" instance=ExtResource("14_r7sob")]
position = Vector2(-102.00001, 2601)
scale = Vector2(4.5089417, 4.5089417)
metadata/_edit_lock_ = true

[node name="Pot31" parent="Objects" instance=ExtResource("15_y5y3l")]
position = Vector2(2810, 418.99997)
scale = Vector2(4.3263273, 4.3263273)
metadata/_edit_lock_ = true

[node name="Tree0" parent="Objects" instance=ExtResource("16_vjgi4")]
position = Vector2(3176.0002, 840)
scale = Vector2(4.538922, 4.538922)
metadata/_edit_lock_ = true

[node name="Tree1" parent="Objects" instance=ExtResource("16_vjgi4")]
position = Vector2(4144, 1454)
scale = Vector2(4.538922, 4.538922)
metadata/_edit_lock_ = true

[node name="Tree2" parent="Objects" instance=ExtResource("16_vjgi4")]
position = Vector2(4796, 1230.0001)
scale = Vector2(4.538922, 4.538922)
metadata/_edit_lock_ = true

[node name="Tree3" parent="Objects" instance=ExtResource("16_vjgi4")]
position = Vector2(2912.0005, 2130)
scale = Vector2(4.538922, 4.538922)
metadata/_edit_lock_ = true

[node name="Tree4" parent="Objects" instance=ExtResource("16_vjgi4")]
position = Vector2(4184, 2520.0002)
scale = Vector2(4.538922, 4.538922)
metadata/_edit_lock_ = true

[node name="Tree5" parent="Objects" instance=ExtResource("16_vjgi4")]
position = Vector2(4184, 2520.0002)
scale = Vector2(4.538922, 4.538922)
metadata/_edit_lock_ = true

[node name="Tree6" parent="Objects" instance=ExtResource("16_vjgi4")]
position = Vector2(1576.0005, 2324)
scale = Vector2(4.538922, 4.538922)
metadata/_edit_lock_ = true

[node name="Pole0" parent="Objects" instance=ExtResource("17_kyk2p")]
position = Vector2(3289, 337)
scale = Vector2(-5.0456758, -5.0456758)

[node name="Pole1" parent="Objects" instance=ExtResource("17_kyk2p")]
position = Vector2(2403, 2835)
scale = Vector2(-5.0456758, -5.0456758)

[node name="Pole2" parent="Objects" instance=ExtResource("17_kyk2p")]
position = Vector2(893, 2823)
scale = Vector2(-5.0456758, -5.0456758)

[node name="Potion1" parent="Objects" instance=ExtResource("19_45i86")]
position = Vector2(259, -44)
scale = Vector2(4.7, 4.7)

[node name="Potion2" parent="Objects" instance=ExtResource("19_45i86")]
position = Vector2(2794.9998, -1102)
scale = Vector2(4.7, 4.7)

[node name="Potion3" parent="Objects" instance=ExtResource("19_45i86")]
position = Vector2(2939.9998, 1562.9999)
scale = Vector2(4.7, 4.7)

[node name="Potion4" parent="Objects" instance=ExtResource("19_45i86")]
position = Vector2(831, 2381)
scale = Vector2(4.7, 4.7)

[node name="BackgroundMap" type="TextureRect" parent="."]
z_index = -4096
offset_left = -3133.0
offset_top = -1755.0
offset_right = 5236.1426
offset_bottom = 3036.0
texture = ExtResource("9_g4kob")
metadata/_edit_lock_ = true

[node name="MapBorder" type="StaticBody2D" parent="."]
collision_mask = 0
metadata/_edit_lock_ = true

[node name="TopWall" type="CollisionShape2D" parent="MapBorder"]
position = Vector2(1047, -1665.5)
shape = SubResource("RectangleShape2D_vjgi4")

[node name="BottomWall" type="CollisionShape2D" parent="MapBorder"]
position = Vector2(1047, 3006.25)
shape = SubResource("RectangleShape2D_kyk2p")

[node name="RightWall" type="CollisionShape2D" parent="MapBorder"]
position = Vector2(5120, 700)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_45i86")

[node name="LeftWall" type="CollisionShape2D" parent="MapBorder"]
position = Vector2(-3110, 700)
shape = SubResource("RectangleShape2D_sv1m6")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_sv1m6")
volume_db = -4.039
autoplay = true
max_distance = 4096.0

[connection signal="health_changed" from="Player" to="BorderLayer/HUD" method="_on_player_health_changed"]
[connection signal="timeout" from="GlobalTimer" to="." method="_on_global_timer_timeout"]
